--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -31,18 +31,13 @@
                                     @Html.DisplayFor(modelItem => item.User.firstName)
                                     @Html.DisplayFor(modelItem => item.category)
                                 </p>
-                                @Html.ActionLink("More Information", "Details", null, new { @class = "infos", data_toggle = "modal", data_target = "#description" })
-
-
+                                @Html.ActionLink("More Information", "Details", new { id = item.id }, new { @class = "infos"})
 
                                 <!-- @Html.ActionLink("Complain", "AddComplaint")-->
                                 @{
                                     //Html.ActionLink(linkText: "Complainn", actionName: "AddComplaint", controllerName: "Complaints", routeValues: new { id = idlogged }, htmlAttributes: null)
                                 }
-                                @if (item.localisation != null)
-                                {
-                                    @Html.ActionLink(linkText: "Location", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
-                                }
+                             
                             </div>
                         </div>
                     </div>
