--- a/DariTn/Views/Localisations/Create.cshtml
+++ b/DariTn/Views/Localisations/Create.cshtml
@@ -14,7 +14,30 @@
 <div class="form-horizontal">
     <h4>Localisation</h4>
     <hr />
+    <p>Click the button to get your coordinates.</p>
+
+    <button onclick="getLocation()">Try It</button>
+    <p id="demo"></p>
+
+<script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    } else { 
+        x.innerHTML = "Geolocation is not supported by this browser.";
+    }
+}
+
+function showPosition(position) {
+    x.innerHTML = "Latitude: " + position.coords.latitude + 
+    "<br>Longitude: " + position.coords.longitude;
+}
+</script>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+
     <div class="form-group">
         @Html.LabelFor(model => model.latitude, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
