--- a/DariTn/Views/Localisations/MyAdvs.cshtml
+++ b/DariTn/Views/Localisations/MyAdvs.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<DariTn.Models.Entities.AssetAdv>
 @{
-    ViewBag.Title = "Sale";
+    ViewBag.Title = "My Advertisements";
 }
 <!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Sale</title>
+    <title>My Advertisements</title>
 </head>
 <body>
     @{ int idlogged = 1;}
@@ -25,24 +25,30 @@
                                     <p class="description text-muted">
 
                                         @Html.DisplayFor(modelItem => item.description)
-                                    </p>
-
-                                    @Html.ActionLink("More Information", "Details", new { id = item.id }, new { @class = "infos" })
-                                    @if (item.userid == idlogged)
+                                        @if (item.status.Equals(true))
+                                        {
+                                        <p style="color:green">Confirmed</p>
+                                    }
+                                    else
                                     {
+                                        <p style="color:red;">Waiting for confirmation</p>
+                                    }
+                                        </p>
+
+                                        @Html.ActionLink("More Information", "Details", new { id = item.id }, new { @class = "infos" })
                                         @Html.ActionLink("Delete", "Delete", new { id = item.id }, new { @class = "infos" })
-                                    }
-
-                                    <!-- @Html.ActionLink("Complain", "AddComplaint")-->
-                                    @{
-                                        //Html.ActionLink(linkText: "Complainn", actionName: "AddComplaint", controllerName: "Complaints", routeValues: new { id = idlogged }, htmlAttributes: null)
-                                    }
-                                    @Html.ActionLink(linkText: "Localisation", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
-
+                                        @if (item.localisation == null)
+                                        {
+                                            @Html.ActionLink(linkText: "Create Localisation", actionName: "Create", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
+                                        }
+                                        else
+                                        {
+                                            @Html.ActionLink(linkText: "Localisation", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
+                                        }
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    }
+                        }
                 </div>
             </div>
         </div>
