--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -13,13 +13,133 @@
 <div id="selling" class="second-theme-selling">
     <div class="tab-content container-fluid">
         <div id="tab-villa" class="tab-pane active container">
+
+            <div style="background-color:antiquewhite; width:25%;float:left;">
+                <div>
+                    <div>
+                        <h2>Search Option</h2>
+                        <div class="row">
+
+                            <div class="col-xxs-12 col-xs-12">
+                                <section>
+                                    <label for="class">Sort by:</label>
+                                    <select class="cs-select cs-skin-border input-half">
+                                        <option value="" disabled selected>Any</option>
+                                        <option value="1">Highest Price</option>
+                                        <option value="2">Lowest Price</option>
+                                        <option value="3">Highest Surface</option>
+                                        <option value="4">Lowest Surface</option>
+                                    </select>
+                                </section>
+                            </div>
+
+                            <div class="col-xxs-12 col-xs-12">
+                                <div style="width:49%; ">
+                                    <input type="checkbox" id="box1" value="1" onclick="terms_changed1(this)" />
+                                    <label for="minmax">Min/Max Price</label>
+                                </div>
+
+                                <div style="width:49%; float:left;">
+                                    <label for="maxprice">Max Price:</label>
+                                    <input type="text" class="form-control" name="maxprice" id="maxprice" placeholder="Maximum price" disabled />
+
+                                </div>
+                                <div style="width:49%; float:left; margin-left:2%;">
+                                    <label for="minprice">Min Price:</label>
+                                    <input type="text" class="form-control" name="minprice" id="minprice" placeholder="Minimum price" disabled />
+                                </div>
+                                <br />
+                            </div>
+                            <div class="col-xxs-12 col-xs-12">
+                                <section>
+                                    <br />
+                                    <input type="checkbox" id="box2" value="2" onclick="terms_changed2(this)" />
+                                    <label for="class">Category:</label>
+                                    <select class="cs-select cs-skin-border" disabled id="categ">
+                                        <option value="" disabled selected>Any</option>
+                                        <option value="1">Apartment</option>
+                                        <option value="2">Office</option>
+                                        <option value="3">House</option>
+                                        <option value="4">Land</option>
+                                    </select>
+                                </section>
+                                <br />
+                            </div>
+                            <div class="col-xxs-12 col-xs-12">
+                                <div style="width:49%; ">
+                                    <input type="checkbox" id="box3" value="3" onclick="terms_changed3(this)" />
+                                    <label for="state">State</label>
+                                    <input type="text" class="form-control" name="state" id="state" placeholder="State Name" disabled />
+                                </div>
+                            </div>
+                            <div class="col-xxs-12 col-xs-12">
+                                <div style="width:49%; ">
+                                    <input type="checkbox" id="box4"  value="4" onclick="terms_changed4(this)" />
+                                    <label for="city">City</label>
+                                    <input type="text" class="form-control" name="city" id="city" placeholder="City Name" disabled />
+                                </div>
+                            </div>
+
+                            <div class="col-xxs-12 col-xs-12">
+                                <div style="width:49%; ">
+                                    <input type="checkbox" id="box5" value="5" onclick="terms_changed5(this)" />
+                                    <label for="postal">Postal Code</label>
+                                    <input type="text" class="form-control" name="postal" id="postal" placeholder="Postal Code Number" disabled />
+                                </div>
+                            </div>
+
+                            <div class="col-xxs-12 col-xs-12">
+                                <div style="width:49%; ">
+                                    <input type="checkbox" id="box6" value="6" onclick="terms_changed6(this)" />
+                                    <label for="nbrRooms">Number of Rooms</label>
+                                    <input type="text" class="form-control" name="nbrRooms" id="nbrRooms" placeholder="Number of Rooms" disabled />
+                                </div>
+                            </div>
+
+                            <div class="col-xxs-12 col-xs-12">
+                                <section>
+                                    <br />
+                                    <input type="checkbox" id="box7" value="7" onclick="terms_changed7(this)" />
+                                    <label for="class">Options:</label>
+                                    <select class="cs-select cs-skin-border" disabled id="bools">
+                                        <option value="" disabled selected>Any</option>
+                                        <option value="1">Is Furnished</option>
+                                        <option value="2">Has a Garage</option>
+                                        <option value="3">Has a Parking Spot</option>
+                                    </select>
+                                </section>
+                            </div>
+
+                            
+                            <div class="col-xxs-12 col-xs-12 text-center">
+                                <br />
+                                <p><a class="btn btn-primary btn-lg" href="#">Search</a></p>
+                            </div>
+                        </div>
+                        </div>
+                </div>
+                <div class="map" style="background-image: url(~/img/home.jpg);">
+                </div>
+            </div>
+
             <div class="row">
                 @foreach (var item in Model)
                 {
 
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="sub-box">
-                            <img class="img-responsive" src="img/selling-img/sel-img1.jpg">
+                            @if (item.category.Equals("Apartment"))
+                            {
+                                <img class="img-responsive" src="~/img/selling-img/apartment.jpg">
+                            }
+                            else if (item.category.Equals("House"))
+                            {
+                                <img class="img-responsive" src="~/img/selling-img/sel-img1.jpg">
+                            }
+                            else if (item.category.Equals("Office"))
+                            {
+                                <img class="img-responsive" src="~/img/selling-img/office.jpg">
+                            }
                             <div class="sub-box-content">
                                 <h5>@Html.DisplayFor(modelItem => item.category)</h5>
                                 <p class="description text-muted">
@@ -37,11 +157,11 @@
 
                                 <!-- @Html.ActionLink("Complain", "AddComplaint")-->
                                 @{
-                                    //Html.ActionLink(linkText: "Complainn", actionName: "AddComplaint", controllerName: "Complaints", routeValues: new { id = idlogged }, htmlAttributes: null)
+                                //Html.ActionLink(linkText: "Complainn", actionName: "AddComplaint", controllerName: "Complaints", routeValues: new { id = idlogged }, htmlAttributes: null)
                                 }
                                 @if (item.localisation != null)
                                 {
-                                    @Html.ActionLink(linkText: "Location", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
+                                @Html.ActionLink(linkText: "Location", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
                                 }
                             </div>
                         </div>
@@ -131,7 +251,7 @@
         </div>
     </div>
 </div>
-
+<script src="~/js/checkedSelim.js"></script>
 <!-- End of Social Icons -->
 <!-- jQuery-->
 <script src="~/js/jquery.min.js"></script>
