--- a/DariTn/Views/AssetAdvs/Sale.cshtml
+++ b/DariTn/Views/AssetAdvs/Sale.cshtml
@@ -19,7 +19,13 @@
                     {
                         <div class="col-xs-12 col-sm-6 col-md-3">
                             <div class="sub-box">
-                                <img class="img-responsive" src="img/selling-img/sel-img1.jpg">
+                                @if (item.category.Equals("Apartment")) {
+                                <img class="img-responsive" src="~/img/selling-img/apartment.jpg">
+                                } else if (item.category.Equals("House")) { 
+                                <img class="img-responsive" src="~/img/selling-img/sel-img5.jpg">
+                                } else if (item.category.Equals("Office")) { 
+                                <img class="img-responsive" src="~/img/selling-img/office.jpg">
+                                }
                                 <div class="sub-box-content">
                                     <h5>@Html.DisplayFor(modelItem => item.category)</h5>
                                     <p class="description text-muted">
