--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -73,10 +73,23 @@
                                 Properties
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                                <ul> @Html.ActionLink("All Advertisements", "Index", "AssetAdvs")</ul>
-                                <ul> @Html.ActionLink("Rent Advertisements", "Rent", "AssetAdvs")</ul>
-                                <ul> @Html.ActionLink("Sale Advertisements", "Sale", "AssetAdvs")</ul>
-                                <ul> @Html.ActionLink("My Advertisements", "MyAdvs", "AssetAdvs")</ul>
+                                <li> @Html.ActionLink("All Advertisements", "Index", "AssetAdvs")</li>
+                                <li> @Html.ActionLink("Rent Advertisements", "Rent", "AssetAdvs")</li>
+                                <li> @Html.ActionLink("Sale Advertisements", "Sale", "AssetAdvs")</li>
+                                <li> @Html.ActionLink("My Advertisements", "MyAdvs", "AssetAdvs")</li>
+                            </ul>
+                        </div>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <div class="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                My Space
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                                <li> @Html.ActionLink("Ads based on your search history", "Target1", "AssetAdvs")</li>
+                                <li> @Html.ActionLink("Ads based on your location", "Target2", "AssetAdvs")</li>
+                                <li> @Html.ActionLink("Assets near you", "#", "#")</li>
                             </ul>
                         </div>
                     </li>
@@ -86,11 +99,11 @@
                                 Furniture
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-                                <ul> @Html.ActionLink("Buy Furnitures", "Index", "FurnitureAdvs")</ul>
-                                <ul> @Html.ActionLink("My ​​Furnitures", "Index2", "FurnitureAdvs")</ul>
-                                <ul> @Html.ActionLink("Add Furnitures", "Create", "FurnitureAdvs")</ul>
-                                <ul> @Html.ActionLink("My Orders", "Index", "Orders")</ul>
-                                <ul> @Html.ActionLink("My ShoppingCart", "Index", "ShoppingCarts")</ul>
+                                <li> @Html.ActionLink("Buy Furnitures", "Index", "FurnitureAdvs")</li>
+                                <li> @Html.ActionLink("My ​​Furnitures", "Index2", "FurnitureAdvs")</li>
+                                <li> @Html.ActionLink("Add Furnitures", "Create", "FurnitureAdvs")</li>
+                                <li> @Html.ActionLink("My Orders", "Index", "Orders")</li>
+                                <li> @Html.ActionLink("My ShoppingCart", "Index", "ShoppingCarts")</li>
                             </ul>
                         </div>
                     </li>
